--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
     <div class="row">
       <div class="col-sm-1 hour">1PM</div>
              <textarea class="col-sm-8 row future" id="timeBlock13" rows="3" cols="10"></textarea>
-          <button data-time="#timeBlock1PM" class=" col-sm-1 saveBtn">Save</button>
+          <button data-time="#timeBlock13" class=" col-sm-1 saveBtn">Save</button>
     </div>
     <div class="row">
       <div class="col-sm-1 hour">2PM</div>
              <textarea class="col-sm-8 row future" id="timeBlock14" rows="3" cols="10"></textarea>
-          <button data-time="#timeBlock2PM" class=" col-sm-1 saveBtn">Save</button>
+          <button data-time="#timeBlock14" class=" col-sm-1 saveBtn">Save</button>
     </div>
     <div class="row">
       <div class="col-sm-1 hour">3PM</div>
              <textarea class="col-sm-8 row future" id="timeBlock15" rows="3" cols="10"></textarea>
-          <button data-time="#timeBlock3PM" class=" col-sm-1 saveBtn">Save</button>
+          <button data-time="#timeBlock15" class=" col-sm-1 saveBtn">Save</button>
     </div>
     <div class="row">
       <div class="col-sm-1 hour">4PM</div>
              <textarea class="col-sm-8 row future" id="timeBlock16" rows="3" cols="10"></textarea>
-          <button data-time="#timeBlock4PM" class=" col-sm-1 saveBtn">Save</button>
+          <button data-time="#timeBlock16" class=" col-sm-1 saveBtn">Save</button>
     </div>
     <div class="row">
       <div class="col-sm-1 hour">5PM</div>
              <textarea class="col-sm-8 row future" id="timeBlock17" rows="3" cols="10"></textarea>
-          <button data-time="#timeBlock5PM" class=" col-sm-1 saveBtn">Save</button>
+          <button data-time="#timeBlock17" class=" col-sm-1 saveBtn">Save</button>
     </div>
   </div>
   
